little changes in login, signup files and fixed close button and removed some extra spaces

--- a/view/static/css/signup.css
+++ b/view/static/css/signup.css
@@ -9,7 +9,7 @@
     width: 40px;
     height: 100%;
     line-height: 30px;
-    margin: -15px 5px 0 0;
+    margin: -30px -15px 15px 0;
 
 }
 
@@ -60,7 +60,7 @@
 .signup-form h1{
     /*width:400px;*/
     /*margin: 10px;*/
-    margin: 0 -40px 10px -40px;
+    margin: -15px -40px 10px -40px;
     padding: 0 0 20px 80px;
     text-align: center;
     border-bottom: 1px solid silver;
